# Prusa-Firmware

./: .cmake-format.py  .editorconfig  .gitattributes  .gitignore  .travis.yml  BUILDING.md  BlinkM.cpp  BlinkM.h  CMakeLists.txt  CUSTOM.md  Community_made.md  Configuration.h  ConfigurationStore.cpp  ConfigurationStore.h  Configuration_adv.h  Configuration_prusa.h  Dcodes.cpp  Dcodes.h  FW_MK3S-EINSy10a (Rev1).hex  FW_MK3S-EINSy10a (Rev10 DEBUG).hex  FW_MK3S-EINSy10a (Rev10 DEBUG2).hex  FW_MK3S-EINSy10a (Rev10).hex  FW_MK3S-EINSy10a (Rev3).hex  FW_MK3S-EINSy10a (Rev4).hex  FW_MK3S-EINSy10a (Rev5).hex  FW_MK3S-EINSy10a (Rev6).hex  FW_MK3S-EINSy10a (Rev8).hex  FW_MK3S-EINSy10a (Rev9).hex  Firmware.ino  Firmware.sublime-project  Firmware.sublime-workspace  LEEME.txt  LICENSE  LiquidCrystal.cpp  MK404-build.sh  Marlin.h  MarlinSerial.cpp  Marlin_main.cpp  PF-build.sh  README.md  (+77 more)
.github/ISSUE_TEMPLATE/: bug_report.md  community.md  config.yml  enhancement.md  feature_request.md  question.md
.github/travis/: TEST  cmake-build.sh  cmake-lang.sh  cmake-test.sh  legacy-build.sh
.github/workflows/: build.yml  pr-size.sh  pr-size.yml  stale.yml
Firmware/: .gitignore  AutoDeplete.cpp  AutoDeplete.h  BlinkM.cpp  BlinkM.h  Configuration.c  Configuration.cpp  Configuration.h  ConfigurationStore.cpp  ConfigurationStore.h  Configuration_adv.h  Configuration_prusa.h  Configuration_var.h  DOGMbitmaps.h  Dcodes.cpp  Dcodes.h  FW_MK3S-EINSy10a (Rev2).hex  FW_MK3S-EINSy10a (Rev7).hex  Filament_sensor.cpp  Filament_sensor.h  Firmware.ino  Firmware.ino.rambo.hex  Firmware.ino.with_bootloader.rambo.hex  Firmware.sublime-project  Firmware.sublime-workspace  FontTable.h  LiquidCrystal.cpp  LiquidCrystal.h  LiquidCrystal_Prusa.cpp  LiquidCrystal_Prusa.h  MK3-MMU-FSensorBN2234.hex  MK3-PreCompiled501-2132.hex  Marlin.h  Marlin.h.bak  MarlinSerial.cpp  MarlinSerial.h  Marlin_main.cpp  Marlin_main.cpp~RF6ca149ac.TMP  MeatPack.h  MenuStack.cpp  (+229 more)
Firmware/Fonts/: FontGen.py  FontTable.h  Font_CZ.lcd  Font_DE.lcd  Font_ES.lcd  Font_FR.lcd  Font_IT.lcd  Font_PL.lcd  Font_RO.lcd  Font_TR.lcd  Prusa.lcd
Firmware/mmu2/: buttons.h  error_codes.h  errors_list.h  progress_codes.h  registers.h
Firmware/temp_model/: e3d_REVO.h  e3d_REVO_HF_60W.h
Firmware/thermal_model/: e3d_REVO.h  e3d_REVO_HF_60W.h  e3d_REVO_HT_40W.h  e3d_v6.h
Firmware/variants/: 175mm-RAMBo13a-E3Dv6full.h  175mm-RAMBo13a-E3Dv6lite.h  1_75mm-RAMBo10a-E3Dv6full.h  1_75mm-RAMBo10a-E3Dv6lite.h  1_75mm-RAMBo13a-E3Dv6full.h  1_75mm-RAMBo13a-E3Dv6lite.h  1_75mm_MK1-RAMBo10a-E3Dv6full.h  (+208 more)
Tests/: AutoDeplete_test.cpp  Example_test.cpp  PrusaStatistics_test.cpp  Timer_test.cpp  shellcheck.sh
boards/: prusa_rambo.json
cmake/: AnyAvrGcc.cmake  AvrGcc.cmake  Check_final_lang_bin_size.cmake  Check_lang_size.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  LocalAvrGcc.cmake  ProjectVersion.cmake  ReproducibleBuild.cmake  Utilities.cmake
hex_files/: 1-75mm-RAMBo-10a-E3D-v6.hex  1-75mm-RAMBo-10a-E3D-v6lite.hex  1-75mm-RAMBo-13a-E3D-v6.hex  175-LS-RAMBo1-3a-en.hex  175-RAMBo1-0a-cz-metal.hex  175-RAMBo1-0a-cz.hex  175-RAMBo1-0a-en-metal.hex  175-RAMBo1-0a-en.hex  175-RAMBo1-3a-cz-metal.hex  175-RAMBo1-3a-cz.hex  175-RAMBo1-3a-en-metal.hex  175-RAMBo1-3a-en.hex  175mm-RAMBo13a-E3Dv6lite.hex  1_75mm-RAMBo10a-E3Dv6full.hex  1_75mm-RAMBo10a-E3Dv6lite.hex  1_75mm-RAMBo13a-E3Dv6full.hex  1_75mm-RAMBo13a-E3Dv6lite.hex  1_75mm_MK2-RAMBo10a-E3Dv6full.hex  1_75mm_MK2-RAMBo13a-E3Dv6full.hex  1_75mm_MK25-RAMBo13a-E3Dv6full.hex  1_75mm_MK3-EINSy10a-E3Dv6full.hex  300-RAMBo1-0a-cz.hex  300-RAMBo1-0a-en.hex  300-RAMBo1-3a-cz.hex  300-RAMBo1-3a-en.hex  3mm-RAMBo10a-PrusaNmk2.hex  3mm-RAMBo13a-PrusaNmk2.hex  3mm-RAMBoBig-PrusaNmk2.hex
lang/: Add_new_language.md  Community_made_translations.md  README.md  config.sh  fw-build.sh  fw-clean.sh  iso639-1.txt  lang-add.sh  lang-build.py  lang-build.sh  lang-check.py  lang-check.sh  lang-clean.sh  lang-community.sh  lang-export.sh  lang-export.sh.bak  lang-extract.py  lang-import.sh  lang-map.py  lang-patchsec.py  lang_en.txt  lang_en_cz.txt  lang_en_da.txt  lang_en_de.txt  lang_en_es.txt  lang_en_fr.txt  lang_en_hr.txt  lang_en_hu.txt  lang_en_it.txt  lang_en_lb.txt  lang_en_lt.txt  lang_en_nl.txt  lang_en_no.txt  lang_en_pl.txt  lang_en_ro.txt  lang_en_sk.txt  lang_en_sl.txt  lang_en_sv.txt  make_lang.sh  not_tran_1_75mm_MK25S-RAMBo10a-E3Dv6full.txt  (+18 more)
lang_backup/: langtool.pl  language.h  language_all.cpp  language_all.h  language_common.h  language_cz.h  language_de.h  language_en.h  language_es.h  language_it.h  language_pl.h
lang_upgrade/: !upgrade.sh  clean.sh  find_msgs.sh  fix_1.out  fix_source_1.sh  make_en_cz.sh  make_lang_en.sh  make_lang_en_cz.sh  make_lang_en_de.sh  make_lang_en_es.sh  make_lang_en_it.sh  make_lang_en_pl.sh  make_msgs.out  make_msgs.sh  make_source.sh  msgs_common.txt  msgs_common_used_more.txt  msgs_common_used_once.txt  msgs_cz.txt  msgs_de.txt  msgs_en.txt  msgs_en_unused.txt  msgs_en_used_more.txt  msgs_en_used_once.txt  msgs_es.txt  msgs_it.txt  msgs_pl.txt  msgs_usage.txt  readme.txt  replace_common.out  replace_en.out  replace_msgs.sh
lib/: CMakeLists.txt
src/: AutoDeplete.h  ConfigurationStore.h  Configuration_adv.h  Marlin.h  MarlinSerial.cpp  MarlinSerial.h  SdInfo.h  bootapp.c  cardreader.h  fsensor.h  heatbed_pwm.cpp  io_atmega2560.h  messages.h  mmu.h  rbuf.h  spi.h  stepper.h  temperature.h  ultralcd.h
tests/: Arduino.h  CMakeLists.txt  Example_test.cpp  PrusaStatistics_test.cpp  Timer_test.cpp
tools/: README.md  dump2bin  dump_crash  dump_eeprom  dump_sram  elf_mem_map  noreset  tml_decode  update_eeprom  utils.gdb  xfimg2dump
utils/: bootstrap.py  build.py
variants/: 1-75mm-RAMBo-10a-E3D-v6.h  1-75mm-RAMBo-10a-E3D-v6lite.h  175-LS-RAMBo1-3a-en.h  175-RAMBo1-0a-cz-metal.h  175-RAMBo1-0a-cz.h  175-RAMBo1-0a-en-metal.h  175-RAMBo1-0a-en.h  175-RAMBo1-3a-cz-metal.h  175-RAMBo1-3a-cz.h  175-RAMBo1-3a-en-metal.h  175-RAMBo1-3a-en.h  300-RAMBo1-0a-cz.h  300-RAMBo1-0a-en.h  300-RAMBo1-3a-cz.h  300-RAMBo1-3a-en.h  3mm-RAMBo-13a-PrusaNmk2.h
(+126 files in other folders)
